--- a/frontend/login.html
+++ b/frontend/login.html
@@ -62,10 +62,10 @@
 
                 <ul class="footer-links">
                     <li>
-                        <a href="#" class="hover:underline">Contact @</a>
+                        <a href="#" class="hover:underline">8094265644</a>
                     </li>
                     <li>
-                        <a href="#">ayyappachowdarykandula@gmail.com</a>
+                        <a href="#">avneeshnarwal786@gmail.com</a>
                     </li>
                 </ul>
             </div>
