--- a/frontend/register.html
+++ b/frontend/register.html
@@ -80,8 +80,8 @@
                 </span>
 
                 <ul class="footer-links">
-                    <li><a href="#">Contact @</a></li>
-                    <li><a href="#">ayyappachowdarykandula@gmail.com</a></li>
+                    <li><a href="#">8094265644</a></li>
+                    <li><a href="#">avneeshnarwal786@gmail.com</a></li>
                 </ul>
             </div>
         </footer>
